Thu May  8 19:44:26 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:

          Removed the unreliable forms of Messenger from the list of tests run
          in automated builds.  See comments in the lst file for details.

Thu May  8 19:08:59 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/MultiRepoTest/ForwardingListener.h:
        * tests/DCPS/MultiRepoTest/ForwardingListener.cpp:

          Added a state variable (bool complete_) for use in waitForCompletion.
          Use of condition variables without external state is dangerous.

Thu May  8 15:13:10 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/StackDataReaderListener.h:

          Changed to inherit from LocalObject_NoRefCount to fix problem with DOC release making
          the default be to reference count local objects.

        * dds/DCPS/LocalObject.h:

          Added a LocalObject_NoRefCount to fix problem with DOC release making the default be
          to reference count local objects.

        * dds/DCPS/transport/simpleUnreliableDgram/SimpleMcastTransport.inl:
        * dds/DCPS/transport/simpleUnreliableDgram/SimpleUdpTransport.inl:

          Removed incorrect _add_ref.  When the object is allocated, it starts with a refcount of 1, so
          the ref count is correct after storing in _rch.

Thu May  8 06:24:39 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/SubscriberImpl.cpp:

          Fixed a warning because of a not used variable.

Wed May  7 19:04:50 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/PublisherImpl.cpp:

          Made PortableServer::ServantBase_var to make sure DataWriterRemoteImpl reference gets removed.

        * dds/DCPS/SubscriberImpl.cpp:

          Made PortableServer::ServantBase_var to make sure DataReaderRemoteImpl reference gets removed.

        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastDataLink.cpp:
